--- a/frontend/src/assets/signup.css
+++ b/frontend/src/assets/signup.css
@@ -5,10 +5,9 @@
 }
 /* signup input 틀의 size and margin */
 .signup_input {
-  /* size */
+  /* box */
   width: 350px;
   height: 100%;
-  /* margin */
   margin-top: 20px;
   /* font */
   font-size: 6px;
@@ -16,27 +15,24 @@
 
 /* 기본 input 설정 */
 .signup_input input{
-  /* padding and margin */
+  /* box */
   padding: 1em 1em;
   padding-bottom: 2px;
   margin-bottom: 20px;
-  /* size */
   width: 100%;
   height: 50px;
   background : transparent;
+  border: 0;
+  border-bottom: 0.7px solid #00BD9D;
   /* font */
   color: white;
   font-size: 12px;
   ime-mode: disabled;
-  /* border */
-  border: 0;
-  border-bottom: 0.7px solid #00BD9D;
 }
 /* input focused 설정 */
 .signup_input input:focus {
   /* padding */
   border: 0;
-  /* outline */
   padding-bottom: 1em;
   border-radius: 7px;
   box-shadow: 0 0 0 0.7px #00BD9D;
@@ -45,36 +41,36 @@
   color: white;
 }
 .signup_input button {
-  /* size */
+  /* box */
   width: 100%;
   height: 50px;
   margin-top: 20px;
-  background-color: #00BD9D;
-  /* border */
   border: 0;
   border-radius: 10px;
+  /* background */
+  background-color: #00BD9D;
   /* font */
   color: white;
   font-size: 14px;
-  /* others */
+  /* etc */
   cursor: pointer;
 }
 .signup_input button:focus {
-  background-color: #036B5A;
   box-shadow: 0 0 0 1.5px #00BD9D;
+  background-color: #036B5A;
 }
 
 .input-file-button {
-  /* margin & padding */
+  /* box */
   padding: 10px 25px;
   margin-bottom: 30px;
   margin-left: 100px;
-  /* background & border */
-  background-color: #036B5A;
   border-radius: 4px;
+  /* background */
+  background-color: #036B5A;
   /* font */
   font-size: 10px;
   color: white;
-  /* others */
+  /* etc */
   cursor: pointer;
 }
