--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -71,10 +71,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  padding-right: 0 !important;
+} 
 
 .text-white {
-  color: #ffffff;
+  color: whitesmoke;
 }
 
 .text-green {
