⚡feat : 내 프로필 & 친구목록 프로필 이미지 추가

--- a/frontend/src/assets/lobby.css
+++ b/frontend/src/assets/lobby.css
@@ -99,6 +99,11 @@
   border-radius: 10px;
 }
 
+#sidebar .el-avatar {
+  --el-avatar-bg-color : transparent;
+  border: 1px solid #00bd9d;
+}
+
 .sidebar-profile {
   /* layout */
   padding: 5px 0 5px 5px;
