--- a/frontend-cli/src/assets/base.css
+++ b/frontend-cli/src/assets/base.css
@@ -62,7 +62,6 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
@@ -72,6 +71,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-right: 0 !important;
+  background: #060d19;
+  overflow: hidden;
+}
+
+#star-background {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
 }
 
 .text-white {
